Replaces all the occurrences of clazz.newInstance()
Replaces all the occurrences of

    clazz.newInstance()

in jpf-core with

    clazz.getDeclaredConstructor().newInstance()

From
http://cr.openjdk.java.net/~iris/se/10/latestSpec/api/java/lang/Class.html#newInstance()

Class.newInstance() method propagates any exception thrown by the
nullary constructor, including a checked exception. Use of this method
effectively bypasses the compile-time exception checking that would
otherwise be performed by the compiler. The Constructor.newInstance
method avoids this problem by wrapping any exception thrown by the
constructor in a (checked) InvocationTargetException.